<resources>
    <string name="app_name">app</string>
    <string name="title_home">Главная</string>
    <string name="title_calendar">Календарь</string>
    <string name="title_training">Тренировки</string>
    <string name="title_profile">Профиль</string>
    <string name="checkState">Оценить свое состояние</string>
    <string name="startWorkout">Начать тренировку</string>
    <string name="name">Имя</string>
    <string name="inputName">Ваше имя</string>
    <string name="age">Возраст</string>
    <string name="inputAge">Ваш возраст</string>
    <string name="sex">Пол</string>
    <string name="sexInput">Выберите пол</string>
    <string name="activity">Уровень подвижности</string>
    <string name="amountPerMonth">Количество тренировок в месяц</string>
    <string name="amount">Введите число от 1 до 30</string>
    <string name="Save">Сохранить</string>
    <string name="Achievements">Достижения</string>
    <string name="workoutText">workoutText</string>
    <string name="finishWorkout">Завершить тренировку</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="material_calendar_monday">ПН</string>
    <string name="material_calendar_tuesday">ВТ</string>
    <string name="material_calendar_wednesday">СР</string>
    <string name="material_calendar_thursday">ЧТ</string>
    <string name="material_calendar_friday">ПТ</string>
    <string name="material_calendar_saturday">СБ</string>
    <string name="material_calendar_sunday">ВС</string>
    <string name="trainingType">Тип тренировки</string>
    <string name="trainingPace">Сложность тренировки</string>
    <string name="disclaimer">Не тренируйтесь при плохом самочувствии</string>
    <string name="estimateHealth">Оцените свое самочувстие</string>
    <string name="back">Вернуться</string>
    <string name="progress">Прогресс за 6 месяцев</string>
    <string name="curProgress">Прогресс в этом месяце</string>
    <string name="lifestyle">Образ жизни</string>
    <string name="countOfTrainings">Количество занятий в месяц</string>
    <array name="material_calendar_months_array">
        <item>Январь</item>
        <item>Февраль</item>
        <item>Март</item>
        <item>Апрель</item>
        <item>Май</item>
        <item>Июнь</item>
        <item>Июль</item>
        <item>Август</item>
        <item>Сентябрь</item>
        <item>Октябрь</item>
        <item>Ноябрь</item>
        <item>Декабрь</item>
    </array>
    <string-array name="sex_array">
        <item>Женский</item>
        <item>Мужской</item>
    </string-array>
</resources>